refactor(controller): @Tag 名称去序号前缀，分页钳制改用 Math.clamp
【B端后端】
- 科室/医生/医院/药房管理 Controller 的 @Tag 移除「2-」「6-」序号前缀，统一接口文档分组
- 分页大小钳制由 Math.max(Math.min(...)) 简化为 Math.clamp