@@ -36,7 +36,7 @@ public class DrugAdminController {
     private static final int MAX_PAGE_SIZE = 100;
 
     private static int clampSize(int size) {
-        return Math.max(1, Math.min(size, MAX_PAGE_SIZE));
+        return Math.clamp(size, 1, MAX_PAGE_SIZE);
     }
 
     private final DrugService drugService;
